# candy-delivery-app

./: .gitignore  README.md  makefile  pyproject.toml  requirements.txt
.github/workflows/: flake8.yml  tests.yml
candy_delivery_app/: dev.db  run.py
candy_delivery_app/database/: db.py  schema.sql
candy_delivery_app/server/: app.py  configurations.py
candy_delivery_app/server/couriers/: __init__.py  logic.py  validation.py  views.py
candy_delivery_app/server/orders/: __init__.py  logic.py  validation.py  views.py
tests/: test.py  test_config.py  test_couriers.py  test_orders.py
