[tool.poetry]
name = "candy-delivery-app"
version = "0.1.0"
description = ""
authors = ["Aleksandr Kiselev <kiselevalexander23@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
waitress = "^2.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
